[package]
name = "gazebo_lint"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Facebook"]
description = "A linter for the Gazebo Rust library"
repository = "https://github.com/facebookincubator/gazebo_lint"

[lib]
plugin = true

[dependencies]
rustversion = "1.0"
smallvec = "1.4"
